# topics

./: .gitignore  .gitmodules  LICENSE  README.md  bibtex.json  bibtext.json  guide.md  main.py  phrases.py  preprocess.py  pyproject.toml  redundancy.ipynb  utils.py
analysis/: boxplots_topic_model_eval.ipynb  boxplots_topic_model_eval.py  correlation_results.csv  coverage-results-nytimes.ipynb  coverage-results-wiki.ipynb  coverage-stability-analysis.ipynb  pairwise_model_comparison_with_human_intrusion_and_ratings.py  regress-auto-metrics.ipynb  regression_results.csv  simple_simulation_results.csv  stability-results.ipynb
data/human/: CreateJointFile.py  ProcessIntrusionDatasets.py  ProcessRatingsDatasets.py  SampleData.py  create_df_from_json.py  process_data.sh
data/human/all_data/: all_data.csv  all_data.json  nyt_intrusion_1.csv  nyt_intrusion_2.csv  nyt_intrusion_3.csv  nyt_intrusion_4.csv  nyt_ratings.csv  nytimes_intrusion.csv  nytimes_intrusion_sampled.csv  nytimes_ratings.csv  nytimes_ratings_sampled.csv  wikitext_intrusion.csv  wikitext_intrusion_1.csv  wikitext_intrusion_2.csv  wikitext_intrusion_3.csv  wikitext_intrusion_4.csv  wikitext_intrusion_sampled.csv  wikitext_ratings.csv  wikitext_ratings_sampled.csv
data/nytimes/: process-data.sh  split.py  subsample_and_split.py
data/wikitext/: download_and_split.py  filter_and_split.py  process-data.sh
previous-human-evals/hian_cheong_thesis/: covid.json
previous-human-evals/pilot_study/: human-eval-analysis.ipynb  leg.json  likerts.csv  news.json
runs/: agglomerative-experiments.ipynb  calculate_coherence.py  calculate_metrics.py  coherence-for-selected-models.ipynb  collect-runs.ipynb  dvae-sweep.yml  etm-sweep.yml  hyper.py  mallet-sweep-test.yml  mallet-sweep.yml
runs/results/full-mindf_power_law-maxdf_0.9/: coherences-for-selected-models.json
soup_nuts/: __main__.py  main.py  metrics.py  phrases.py  preprocess.py  utils.py
survey_tools/: Intrusion_Template.qsf  Intrusion_Template_Prolific.qsf  Topic_Ratings_Template.qsf  Topic_Ratings_Template_Prolific.qsf  compile_data.py  download.py  format.py  generate.py  generate_intrusion_survey.py  generate_ratings_survey.py  power-analysis.ipynb  share.py  survey_utils.py
tests/: test_preprocessing.py
