[tool.poetry]
name = "soup-nuts"
version = "0.1.0"
description = """A topic modeling package that aims to cover the entire \
    preprocessing-estimation-analysis pipeline: it's soup to nuts.
    """
authors = ["Alexander Hoyle <hoyle@umd.edu>"]
readme = "README.md"

[tool.poetry.scripts]
soup-nuts = "soup_nuts.main:app"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.0"
scikit-learn = "^0.24"
tqdm = "*"
typer = {extras = ["all"], version = "^0.3.2"}
gensim = "^4.0"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"