[tool.poetry]
name = "soup-nuts"
version = "0.1.1"
description = """A topic modeling package that aims to cover the entire preprocessing-estimation-analysis pipeline: it's soup to nuts."""
authors = ["Alexander Hoyle <hoyle@umd.edu>"]
readme = "README.md"

[tool.poetry.scripts]
soup-nuts = "soup_nuts.main:app"

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.7"
scikit-learn = "^1.3"
tqdm = "*"
typer = {extras = ["all"], version = "^0.9.0"}
gensim = "^4.0"
rbo = "^0.1.3"
pandas = "^2.1.3"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
